test/Fail/ModuleDefinedInOtherFile.agda

module ModuleDefinedInOtherFile where

import Imports.B

